# -LoungeAccessAdvisor

./: .env.template  API_CLIENT_ENHANCEMENTS.md  DEPLOYMENT_CHECKLIST.md  FLIGHT_INTEGRATION_SUMMARY.md  LAMBDA_HANDLER_CHANGES.md  MCP_TOOL_NAMES.md  README.md  app.py  appspec.yml  buildspec.yml  cicd-pipeline.yaml  deploy-cicd.sh  lambda_deployment_package.py  pyproject.toml  test_api_client.py  test_flight_integration.py  test_import_structure.py  test_lambda_handler.py  test_lambda_imports.py  validate_tool_names.py
.github/workflows/: deploy.yml
deploy/: appspec.yml  cicd-pipeline-ALB.yaml  cicd-pipeline-v2.yaml  cicd-pipeline.yaml  cloudformation.yaml  dynamodb-infrastructure.yaml  resource-template-v2.yaml  resource-template.yaml
etc/: gateway_config.json
mcp_tools/: analyze_layover_strategy.json  flight_aware_lounge_recommendations.json  search_flights_with_lounge_optimization.json
scripts/: after_install.sh  before_install.sh  start_application.sh  stop_application.sh
src/: chat.py  config.py  home.py  login.py  lounge_access_agent_memory.py  make_hash.py  mcp_client.py  system_prompts.py  users.json
src/mcp/lounge_access/: FLIGHT_SCHEDULE_README.md  TEST_README.md  __init__.py  api_client.py  flight_service.py  flights_api_client.py  lambda_handler.py  lounge_service.py  mcp_handler.py  pytest.ini  requirements.txt  run_tests.py  test_api_client.py  test_flight_schedule.py  test_lambda_handler.py  test_lounge_functionality.py  test_lounge_service.py  test_user_profile.py  user_profile_service.py
src/mcp/lounge_access/IaC/: agentcore_gateway.py  (+4 more)
(+6 files in other folders)
